# byol-pytorch

./: .gitignore  README.md  environment.yaml  environment.yml  justfile  pyproject.toml  requirements.txt  setup.py  train_byol.py
byol_pytorch/: __init__.py  byol_pytorch.py  trainer.py
cluster/: COMMANDS.md  cifar10_submit_alternating-default-config.sh  cifar10_submit_alternating-epochs-800-small-lr.sh  cifar10_submit_alternating-epochs-800.sh  cifar10_submit_alternating-learnaug-colorjitter-default-config.sh  cifar10_submit_alternating-learnaug-colorjitter-epochs-400-warmup-10.sh  cifar10_submit_alternating-learnaug-colorjitter-epochs-400.sh  cifar10_submit_alternating-learnaug-colorjitter-epochs-800-small-lr.sh  cifar10_submit_alternating-learnaug-colorjitter-epochs-800.sh  cifar10_submit_alternating-parameterized-aug-default-config.sh  cifar10_submit_alternating-parameterized-aug-epochs-400-warmup-10.sh  cifar10_submit_alternating-parameterized-aug-epochs-800-warmup-10.sh  cifar10_submit_alternating_epochs-400-warmup-10.sh  cifar10_submit_alternating_epochs-400.sh  cluster_create_configs_template.py  cluster_create_resnet_training.py  cluster_start_default_config.py  cluster_start_job.py  imagenet_submit_alternating-ftlr-100-ptlr-5e-2-bs-256-epochs-150-warmup-0.sh  imagenet_submit_alternating-ftlr-100-ptlr-5e-2-bs-256-epochs-150-warmup-10.sh  imagenet_submit_alternating-ftlr-100-ptlr-5e-2-bs-256-epochs-400-warmup-0.sh  imagenet_submit_alternating-ftlr-100-ptlr-5e-2-bs-256-epochs-400-warmup-10.sh  meta_worker.sh  meta_worker_default.sh  metassl.submit_default_job.sh  (+60 more)
(+159 files in other folders)
