[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "byol-pytorch"
version = "0.9.1"
description = "Self-supervised contrastive learning made simple"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">= 3.6"
keywords = [
    "self-supervised learning",
    "artificial intelligence"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
]

dependencies = [
    "accelerate",
    "beartype",
    "einops",
    "torch>=1.6",
    "torchvision>=0.8",
]

[project.urls]
Homepage = "https://codeberg.org/lucidrains/byol-pytorch"
Repository = "https://codeberg.org/lucidrains/byol-pytorch"

[tool.hatch.build.targets.wheel]
packages = ["byol_pytorch"]

[tool.hatch.build.targets.sdist]
include = [
    "byol_pytorch",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
